tests/miniJava/neg/004864_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] java ( int [] else java ) { return 0 ; } }
